# entropic_image_contrast_measure

./: .gitignore  LICENSE  README.md  README.txt  contrast_quality.txt  pycontrast.ipynb  pyproject.toml
src/entropic_contrast/: __init__.py  _legacy_pycontrast.py  cli.py  core.py  metrics.py
tests/: test_core.py  test_metrics.py
