[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "entropic-contrast"
version = "0.2.0"
description = "No-reference image contrast quality metric based on Mutual Information between intensity and equalised histograms"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ashish Gupta" }]
requires-python = ">=3.10"
keywords = [
    "image-quality",
    "contrast",
    "mutual-information",
    "entropy",
    "no-reference",
    "computer-vision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "numpy>=1.24",
    "scikit-image>=0.21",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "imageio>=2.33",
    "matplotlib>=3.8",
]

[project.scripts]
contrast-score = "entropic_contrast.cli:main"

[project.urls]
Homepage = "https://github.com/ashish-code/entropic_image_contrast_measure"
Repository = "https://github.com/ashish-code/entropic_image_contrast_measure"

# ---------------------------------------------------------------------------
# Hatchling build — src layout
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/entropic_contrast"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "imageio>=2.33",
    "matplotlib>=3.8",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["src/entropic_contrast"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
